# PolyBot

./: .gitignore  FORMULAS.md  README.md  polybot.db  wallets.json
backend/: .env.example  debug_slugs_detailed.py  polybot.db  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  aggregator.py  chain_data.py  database.py  polymarket.py  risk_engine.py  whale_scoring.py
docs/: ALPHA_SCORING.md  RISK_MANAGEMENT.md  WHALE_RANKING.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx
frontend/src/components/terminal/: PortfolioMonitor.tsx  SettingsTab.tsx  SignalTable.tsx  WhaleManager.tsx  index.ts
frontend/src/components/ui/: Tooltip.tsx
frontend/src/hooks/: useBalance.ts  useSettings.ts  useSignals.ts
frontend/src/lib/: utils.ts
frontend/src/types/: api.ts
